added: new pages - resort.html, scheme.html

--- a/index.html
+++ b/index.html
@@ -287,10 +287,12 @@
 				</div>
 				<div class="benefits graybg">
 					<div class="benefits__container">
-						<div class="benefits__item"><img src="img/benefits/1.png" alt="">Комфортные коттеджи и уютный спорт-отель на берегу Онежского озера </div>
-						<div class="benefits__item"><img src="img/benefits/2.png" alt="">Разнообразный и активный отдых для всей семьи круглый год</div>
-						<div class="benefits__item"><img src="img/benefits/3.png" alt="">Заповедный карельский лес, чистый воздух и просторы Онежского озера</div>
-						<div class="benefits__item"><img src="img/benefits/4.png" alt="">Одни из самых низких цен на различные виды отдыха</div>
+						<div class="benefits__items">
+							<div class="benefits__item"><img src="img/benefits/1.png" alt="">Комфортные коттеджи и уютный спорт-отель на берегу Онежского озера </div>
+							<div class="benefits__item"><img src="img/benefits/2.png" alt="">Разнообразный и активный отдых для всей семьи круглый год</div>
+							<div class="benefits__item"><img src="img/benefits/3.png" alt="">Заповедный карельский лес, чистый воздух и просторы Онежского озера</div>
+							<div class="benefits__item"><img src="img/benefits/4.png" alt="">Одни из самых низких цен на различные виды отдыха</div>
+						</div>
 					</div>
 				</div>
 				<div class="seasons">
