added: missed benefits block for cafe.html

--- a/cafe.html
+++ b/cafe.html
@@ -225,6 +225,45 @@
 				</div>
 			</form>
 			<div class="page">
+				<div class="way graybg">
+					<div class="way__container">
+						<div class="way__items">
+							<div class="way__item">
+								<img src="img/way/4.png" alt="">
+								<div class="way__texts">
+									<div class="way__name">
+										Собственная кухня
+									</div>
+									<div class="way__text">
+										Всегда вкусная и свежая еда. Присутствуют национальные карельские блюда
+									</div>
+								</div>
+							</div>
+							<div class="way__item">
+								<img src="img/way/5.png" alt="">
+								<div class="way__texts">
+									<div class="way__name">
+										особая атмосфера
+									</div>
+									<div class="way__text">
+										Панорамные виды, уютный интерьер и вкусная еда позволит вам расслабиться и получить настоящее удовольствие
+									</div>
+								</div>
+							</div>
+							<div class="way__item">
+								<img src="img/way/6.png" alt="">
+								<div class="way__texts">
+									<div class="way__name">
+										Все способы оплаты
+									</div>
+									<div class="way__text">
+										Мы принимаем как наличный так и безналичный расчет
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="abode">
 					<div class="abode__container">
 						<div class="title">
