--- a/resort.html
+++ b/resort.html
@@ -55,9 +55,9 @@
 									<div class="submenu">
 										<div class="submenu__wrapper">
 											<div class="submenu__list">
-												<p>
+												<a href="">
 													КУРОРТ
-												</p>
+												</a>
 												<ul>
 													<li><a href="">О нас</a></li>
 													<li><a href="">Схема курорта</a></li>
@@ -69,9 +69,9 @@
 												</ul>
 											</div>
 											<div class="submenu__list">
-												<p>
+												<a href="">
 													НОВОСТИ И АКЦИИ
-												</p>
+												</a>
 												<ul>
 													<li><a href="">Акции</a></li>
 													<li><a href="">Новости</a></li>
@@ -80,9 +80,9 @@
 												</ul>
 											</div>
 											<div class="submenu__list">
-												<p>
+												<a href="">
 													ДЛЯ БИЗНЕСА
-												</p>
+												</a>
 												<ul>
 													<li><a href="">Реклама</a></li>
 													<li><a href="">Мероприятия</a></li>
@@ -107,18 +107,18 @@
 										<div class="submenu__wrapper">
 											<div class="submenu__column">
 												<div class="submenu__list">
-													<p>
+													<a href="">
 														Зима
-													</p>
+													</a>
 													<ul>
 														<li><a href="">Ski-Pass</a></li>
 														<li><a href="">Прокат снаряжения</a></li>
 													</ul>
 												</div>
 												<div class="submenu__list">
-													<p>
+													<a href="">
 														Обучение
-													</p>
+													</a>
 													<ul>
 														<li><a href="">Обучение горным лыжам</a></li>
 														<li><a href="">Обучение сноуборду</a></li>
@@ -128,9 +128,9 @@
 												</div>
 											</div>
 											<div class="submenu__list">
-												<p>
+												<a href="">
 													Лето
-												</p>
+												</a>
 												<ul>
 													<li><a href="">SUP и лодки</a></li>
 													<li><a href="">Туры на каяках</a></li>
@@ -141,9 +141,9 @@
 												</ul>
 											</div>
 											<div class="submenu__list">
-												<p>
+												<a href="">
 													А еще...
-												</p>
+												</a>
 												<ul>
 													<li><a href="">Кафе и ресторан</a></li>
 													<li><a href="">Сауна</a></li>
@@ -481,6 +481,9 @@
 									<div class="arrow reviews__prev">
 										<img src="img/arrow.svg" alt="">
 									</div>
+									<div class="reviews__fraction" data-da=".reviews__bottom .slider-actions, 767, 1">
+										1 / 5
+									</div>
 									<div class="arrow reviews__next">
 										<img src="img/arrow.svg" alt="">
 									</div>
@@ -552,9 +555,6 @@
 								<div class="slider-actions">
 									<div class="arrow reviews__prev">
 										<img src="img/arrow.svg" alt="">
-									</div>
-									<div class="reviews__fraction">
-										1 / 5
 									</div>
 									<div class="arrow reviews__next">
 										<img src="img/arrow.svg" alt="">
@@ -712,18 +712,18 @@
 								</div>
 								<div class="footer-top__column">
 									<div class="footer-top__list">
-										<div class="footer-top__name">
+										<a href="" class="footer-top__name">
 											зима
-										</div>
+										</a>
 										<ul>
 											<li><a href="">Ski-pass</a></li>
 											<li><a href="">Прокат снаряжения</a></li>
 										</ul>
 									</div>
 									<div class="footer-top__list">
-										<div class="footer-top__name">
+										<a href="" class="footer-top__name">
 											Обучение
-										</div>
+										</a>
 										<ul>
 											<li><a href="">Обучение горным лыжам</a></li>
 											<li><a href="">Обучение сноуборду</a></li>
@@ -732,9 +732,9 @@
 										</ul>
 									</div>
 									<div class="footer-top__list">
-										<div class="footer-top__name">
+										<a href="" class="footer-top__name">
 											лето
-										</div>
+										</a>
 										<ul>
 											<li><a href="">SUP и лодки</a></li>
 											<li><a href="">Туры на каяках</a></li>
@@ -750,9 +750,9 @@
 										Проживание
 									</a>
 									<div class="footer-top__list">
-										<div class="footer-top__name">
+										<a href="" class="footer-top__name">
 											А еще...
-										</div>
+										</a>
 										<ul>
 											<li><a href="">Кафе и ресторан</a></li>
 											<li><a href="">Сауна</a></li>
@@ -792,9 +792,7 @@
 										<a href="" target="_blank">
 											<img src="img/vk.png" alt="">
 										</a>
-										<a href="" target="_blank">
-											<img src="img/insta.png" alt="">
-										</a>
+
 									</div>
 								</div>
 							</div>
