Добавлена страница: Рыбалка

--- a/fishing.html
+++ b/fishing.html
@@ -183,7 +183,7 @@
 			</header>
 			<main class="banner">
 				<div class="banner__bg">
-					<img src="img/banner/11.jpg" alt="">
+					<img src="img/banner/10.jpg" alt="">
 				</div>
 				<div class="banner__container">
 					<div class="breadcrumb">
@@ -198,7 +198,7 @@
 						</div>
 					</div>
 					<div class="title white">
-						Туры на Каяках
+						Рыбалка
 					</div>
 				</div>
 			</main>
@@ -229,16 +229,16 @@
 					<div class="seo__container">
 						<div class="seo__content">
 							<div class="title">
-								Путешествие по Онежскому озеру
+								«Всякая рыба хороша, коли на удочку пошла»
 							</div>
 							<div class="seo__text">
-								Каякинг - идеальное времяпрепровождение для любителей активного отдыха и здоровой спортивной нагрузки. Такой вид активности прекрасно подходит как для новичков, так и для тех, кто уже ранее был знаком с каякингом.
+								Живописные пейзажи, кристально чистый воздух, обилие рыбы  – все гарантирует незабываемую рыбалку и просто великолепный отдых на лоне природы!
 								<br><br>
-								Это прекрасная возможность отдохнуть от шумного города и полюбоваться живописной красотой Онежского озера!
+								У нас Вы можете арендовать снасти для любительской рыбалки или привезти свои. 
 							</div>
 						</div>
 						<div class="seo__image">
-							<img src="img/seo/13.jpg" alt="">
+							<img src="img/seo/18.jpg" alt="">
 						</div>
 					</div>
 				</div>
@@ -246,234 +246,116 @@
 					<div class="way__container">
 						<div class="way__items">
 							<div class="way__item">
-								<img src="img/way/7.png" alt="">
+								<img src="img/way/10.png" alt="">
 								<div class="way__texts">
 									<div class="way__name">
-										Опытные инструкторы
+										Для семей
 									</div>
 									<div class="way__text">
-										Сопровождение опытных инструкторов на  всем маршруте.
+										Идеальное времяпрепровождение для сплочения семьи и  укреаления связи между поколениями
 									</div>
 								</div>
 							</div>
 							<div class="way__item">
-								<img src="img/way/8.png" alt="">
+								<img src="img/way/11.png" alt="">
 								<div class="way__texts">
 									<div class="way__name">
-										Безопасность
+										Для друзей
 									</div>
 									<div class="way__text">
-										Перед выходом проводится подробный инструктаж, выдаются спасжилеты
+										Не упустите возможность провести незабываемый отдых на природе с друзьями
 									</div>
 								</div>
 							</div>
 							<div class="way__item">
-								<img src="img/way/9.png" alt="">
+								<img src="img/way/12.png" alt="">
 								<div class="way__texts">
 									<div class="way__name">
-										Возраст
+										Для влюбленных
 									</div>
 									<div class="way__text">
-										Рекомендуемый возраст: взрослые и дети старше 12 лет
+										Проведите время наедине друг с другом и насладитесь тишиной и кросотой Онежского озера
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
+				</div>
+				<div class="cost">
+					<div class="cost__container">
+						<div class="title">
+							Сколько стоит аренда
+						</div>
+						<div class="table">
+							<table>
+								<thead>
+									<tr>
+										<th>Услуга</th>
+										<th>Цена/день</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>1 удочка</td>
+										<td>150 ₽</td>
+									</tr>
+									<tr>
+										<td>Набор удочка, подставка, садок, подсачик</td>
+										<td>600 ₽</td>
+									</tr>
+									<tr>
+										<td>Стульчик</td>
+										<td>500 ₽</td>
+									</tr>
+									<tr>
+										<td>Подставка для удочек</td>
+										<td>200 ₽</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="cost__bottom">
+							<b>
+								Внимание!
+							</b>
+							Прикорм и наживка в продаже отсутствуют!
 						</div>
 					</div>
 				</div>
 				<div class="seo">
 					<div class="seo__container">
 						<div class="seo__image">
-							<img src="img/seo/14.jpg" alt="">
+							<img src="img/seo/19.jpg" alt="">
 						</div>
 						<div class="seo__content">
 							<div class="title">
-								Получите яркие эмоции
+								Аренда лодок
 							</div>
 							<div class="seo__text">
-								Романтический тур на закате с вашей второй половинкой или групповое приключение в дневное время с друзьями
-								<br><br>
-								Гарантируем море красочных фото и незабываемое времяпрепровождение
+								Для более комфортной рыбалки Вы можете взять на прокат лодку.
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="rest">
-					<div class="rest__bg">
-						<img src="img/rest/6.jpg" alt="">
-					</div>
-					<div class="rest__container">
-						<div class="rest__body">
-							<div class="rest__bigtitle">
-								Бронирование
-							</div>
-							<div class="rest__text">
-								Запланируйте удивительное летнее путешествие по озеру!
-								<br><br>
-								Бронирование через форму обратной связи или по телефону:
-								<br>
-								<b><a href="tel:+78142330300">+7(814)233-03-00</a></b>
-							</div>
-							<a href="" class="rest__button">
-								Записаться
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="abode">
-					<div class="abode__container">
-						<div class="title">
-							Варианты туров
-						</div>
-						<div class="abode__body">
-							<div class="abode__wrapper">
-								<div class="abode__top">
-									<b>
-										Прогулка по заливу
-									</b>
-								</div>
-								<div class="abode__text">
-									2-х часовая прогулка по заливу Онежского озера.
-									<br>
-									Минимальная группа 2 человека. 
-								</div>
-								<div class="table">
-									<table>
-										<thead>
-											<tr>
-												<th></th>
-												<th>Цена</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Взрослые</td>
-												<td>2 500 ₽</td>
-											</tr>
-											<tr>
-												<td>Дети от 12 лет</td>
-												<td>2 000 ₽</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-								<a href="" class="button">
-									Записаться
-								</a>
-							</div>
-							<div class="abode__photo">
-								<img src="img/seo/16.jpg" alt="">
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="abode">
-					<div class="abode__container">
-						<div class="abode__body">
-							<div class="abode__photo">
-								<img src="img/seo/17.jpg" alt="">
-							</div>
-							<div class="abode__wrapper">
-								<div class="abode__top">
-									<b>
-										Тур по заливу
-									</b>
-								</div>
-								<div class="abode__text">
-									4-х часовой тур по заливу Онежского озера с высадкой на остров и перекусом.
-								</div>
-								<div class="table">
-									<table>
-										<thead>
-											<tr>
-												<th></th>
-												<th>Цена</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr>
-												<td>Взрослые</td>
-												<td>4 000 ₽</td>
-											</tr>
-											<tr>
-												<td>Дети от 12 лет</td>
-												<td>3 000 ₽</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-								<a href="" class="button">
-									Записаться
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="seo graybg">
-					<div class="seo__container">
-						<div class="seo__content">
-							<div class="title">
-								В стоимость включены:
-							</div>
-							<div class="seo__list">
-								<div class="seo__list-item">
-									<img src="img/check.svg" alt="">
-									<span>
-										Аренда каяка и весел
-									</span>
-								</div>
-								<div class="seo__list-item">
-									<img src="img/check.svg" alt="">
-									<span>
-										Спасательный жилет и юбка
-									</span>
-								</div>
-								<div class="seo__list-item">
-									<img src="img/check.svg" alt="">
-									<span>
-										Инструктаж по безопасности и сопровождение инструктора на маршруте.
-									</span>
-								</div>
-							</div>
-						</div>
-						<div class="seo__image">
-							<img src="img/seo/15.jpg" alt="">
-						</div>
-					</div>
-				</div>
-				<div class="slider-block our-yalgora">
-					<div class="slider-block__container">
-						<div class="title">
-							Отдыхайте с пользой для <br class="hide-on-mob"> организма
-						</div>
-						<div class="slider-block__row">
-							<span>
-								Проведите незабываемый отдых в Карелии, окунитесь в мир тихих лесов, живописных озер и чистого воздуха!
-							</span>
-							<div class="slider-actions" data-da=".our-yalgora .slider-block__container, 767, last">
-								<div class="arrow slider-block__prev">
-									<img src="img/arrow.svg" alt="">
-								</div>
-								<div class="slider-block__fraction">
-									1 / 5
-								</div>
-								<div class="arrow slider-block__next">
-									<img src="img/arrow.svg" alt="">
-								</div>
-							</div>
-						</div>
-						<div class="slider-block__fullslider swiper">
-							<div class="swiper-wrapper">
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
-								<div class="swiper-slide"><img src="img/slider-block/25.jpg" alt=""></div>
+							<div class="table">
+								<table>
+									<thead>
+										<tr>
+											<th></th>
+											<th>1 час</th>
+											<th>Цена</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Взрослые</td>
+											<td>1 000 ₽</td>
+											<td>1 050 ₽</td>
+										</tr>
+										<tr>
+											<td>Дети от 12 лет</td>
+											<td>700 ₽</td>
+											<td>950 ₽</td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 						</div>
 					</div>
