--- a/on-winter.html
+++ b/on-winter.html
@@ -181,11 +181,11 @@
 					</div>
 				</div>
 			</header>
-			<main class="banner">
-				<div class="banner__bg">
-					<img src="img/banner/5.jpg" alt="">
+			<main class="inner">
+				<div class="inner__bg">
+					<img src="img/inner/5.jpg" alt="">
 				</div>
-				<div class="banner__container">
+				<div class="inner__container">
 					<div class="breadcrumb">
 						<div class="breadcrumb__container">
 							<a href="">
