--- a/wedding.html
+++ b/wedding.html
@@ -182,11 +182,11 @@
 					</div>
 				</div>
 			</header>
-			<main class="banner">
-				<div class="banner__bg">
-					<img src="img/banner/15.jpg" alt="">
+			<main class="inner">
+				<div class="inner__bg">
+					<img src="img/inner/15.jpg" alt="">
 				</div>
-				<div class="banner__container">
+				<div class="inner__container">
 					<div class="breadcrumb">
 						<div class="breadcrumb__container">
 							<a href="">
